--- a/schedoscope-metascope/src/main/resources/templates/includes/scripts.html
+++ b/schedoscope-metascope/src/main/resources/templates/includes/scripts.html
@@ -21,16 +21,34 @@
   <script data-th-src="@{/js/typeahead.js}"></script>
   <script data-th-src="@{/js/functions.js}"></script>
   <script data-th-src="@{/js/global.js}"></script>
+  
+    <script data-th-src="@{/js/table.js}"></script>
+      <script data-th-src="@{/js/underscore-min.js}"></script>
+  <script data-th-src="@{/js/graphconfig.js}"></script>
+  <script data-th-src="@{/js/graphdataprocessor.js}"></script>
+  <script data-th-src="@{/js/metascopegraph.js}"></script>
+  <script data-th-src="@{/js/vis.min.js}"></script>
 </div>
 
 <div data-th-fragment="index">
   <script data-th-src="@{/js/jquery.cookie-1.4.1.min.js}"></script>
   <script data-th-src="@{/js/index.js}"></script>
+  
+    <script data-th-src="@{/js/table.js}"></script>
+      <script data-th-src="@{/js/underscore-min.js}"></script>
+  <script data-th-src="@{/js/graphconfig.js}"></script>
+  <script data-th-src="@{/js/graphdataprocessor.js}"></script>
+  <script data-th-src="@{/js/metascopegraph.js}"></script>
+  <script data-th-src="@{/js/vis.min.js}"></script>
 </div>
 
 <div data-th-fragment="table">
   <script data-th-src="@{/js/bootstrap-table-expandable.js}"></script>
   <script data-th-src="@{/js/bootstrap-tagsinput.min.js}"></script>
+  <script data-th-src="@{/js/underscore-min.js}"></script>
+  <script data-th-src="@{/js/graphconfig.js}"></script>
+  <script data-th-src="@{/js/graphdataprocessor.js}"></script>
+  <script data-th-src="@{/js/metascopegraph.js}"></script>
   <script data-th-src="@{/js/vis.min.js}"></script>
   <script data-th-src="@{/js/summernote.js}"></script>
   <script data-th-src="@{/js/jquery.tablesorter.min.js}"></script>
