--- a/schedoscope-metascope/src/main/resources/templates/body/table/preview/table_preview.html
+++ b/schedoscope-metascope/src/main/resources/templates/body/table/preview/table_preview.html
@@ -28,6 +28,10 @@
                ${table.databaseName} + ' :: ' + ${table.tableName} + ' (' + ${table.getParameterCommaDelimited()} + ')' :
                ${table.databaseName} + ' :: ' + ${table.tableName}"
               th:onclick="'increaseViewCount(\'' + ${table.fqdn} + '\')'"></a> <span class="pull-right" data-th-text="${table.status}"></span>
+                 <form id="lineageForm">
+        <input type="hidden" name="fqdn" th:value="${table.fqdn}" />
+        <button class="pull-center btn btn-info" data-toggle="modal" data-target="#lineage" th:value="${table.fqdn}" type="button"><i class="fa fa-eye" aria-hidden="true"></i></button>
+      </form>
           </div>
         </form>
       </div>
@@ -62,5 +66,52 @@
         <td width="80%" th:with="value=${util.getTime(table.lastSchemaChange)}" data-th-text="${value == null} ? '-' : ${value}"></td>
       </tr>
     </table>
+  </div>
+  
+  <div class="modal fade" id="lineage" aria-hidden="true" data-th-fragment="table_lineage_modal" tabindex="-1">
+    <div class="modal-dialog" style="width: 90%;">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 data-th-text="'Lineage Graph: ' + ${table.tableName}" class="modal-title"></h4>
+        </div>
+        <form id="lineageForm" style="margin-bottom: 0px;">
+          <input type="hidden" id="lineageFqdn" name="fqdn" th:value="${table.fqdn}" />
+        </form>
+        <div class="modal-body" style="margin-right: 0 !important; padding: 0px;">
+          <div class="row" style="margin-right: 5px;">
+            <div class="col-md-9" style="border-right: #cdcdcd medium solid;">
+              <div id="lineageGraphBig" style="border: #cdcdcd medium solid;"></div>
+              <div id="lineageGraphSmall" style="border: #cdcdcd medium solid;"></div>
+              <div id='controlPanel'>
+			  	<button type="button" class="btn btn-secondary" aria-label="Center" id='zoomOut'>
+			  	<span class="glyphicon glyphicon-resize-full" aria-hidden="true"></span>
+			  	</button>
+			  	<button type="button" class="btn btn-secondary" aria-label="Center" id='zoomIn'>
+			  	<span class="glyphicon glyphicon-resize-small" aria-hidden="true"></span>
+			  	</button>
+			  	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			  	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			  	<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+			  	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			  	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			  </div>
+            </div>
+            <div class="col-md-3" style="padding: 5px;">
+              <div id="lineageDetail" style="padding-top: 10px; overflow: auto; max-height: 600px;">
+              	<div id="lineageName" style="padding: 5px;"></div>
+              	<table id="lineageTable" class="table table-striped">              
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer" style="margin-top: 0px;">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
